Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
None
-
None
-
None
-
Q3 Sprint 2
-
1
Description
Right now, it is declared as follows:
const Duration MASTER_PING_TIMEOUT = master::SLAVE_PING_TIMEOUT * master::MAX_SLAVE_PING_TIMEOUTS
Since static initialization order in C++ is undefined, MASTER_PING_TIMEOUT's value is non-deterministic. We've already observed that in tests (where MASTER_PING_TIMEOUT == 0).
Attachments
Issue Links
- is related to
-
MESOS-1023 Replace all static/global variables with non-POD type
- Accepted