Made MASTER_PING_TIMEOUT a function for fixing MESOS-1673.

Review: https://reviews.apache.org/r/24339