src/slave/constants.cpp
@@ -32,8 +32,6 @@ const Duration EXECUTOR_REREGISTER_TIMEOUT = Seconds(2);
 const Duration EXECUTOR_SIGNAL_ESCALATION_TIMEOUT = Seconds(3);
 const Duration STATUS_UPDATE_RETRY_INTERVAL_MIN = Seconds(10);
 const Duration STATUS_UPDATE_RETRY_INTERVAL_MAX = Minutes(10);
-const Duration MASTER_PING_TIMEOUT =
-  master::SLAVE_PING_TIMEOUT * master::MAX_SLAVE_PING_TIMEOUTS;
 const Duration REGISTRATION_BACKOFF_FACTOR = Seconds(1);
 const Duration REGISTER_RETRY_INTERVAL_MAX = Minutes(1);
 const Duration GC_DELAY = Weeks(1);
@@ -52,6 +50,11 @@ const std::string DEFAULT_PORTS = "[31000-32000]";
 const uint16_t DEFAULT_EPHEMERAL_PORTS_PER_CONTAINER = 16;
 const std::string DEFAULT_EPHEMERAL_PORTS = "[30001-30999]";
 #endif
+
+Duration MASTER_PING_TIMEOUT()
+{
+  return master::SLAVE_PING_TIMEOUT * master::MAX_SLAVE_PING_TIMEOUTS;
+}
 
 } // namespace slave {
 } // namespace internal {
